Fixing some issues found when viewing on mobile devices

--- a/src/Styles/Carousel.scss
+++ b/src/Styles/Carousel.scss
@@ -17,6 +17,16 @@
 	border-radius: 1rem;
 }
 
+.slider {
+	border-radius: 1rem;
+}
+
+.slide{
+	border-radius: 1rem;
+	background: transparent !important;
+}
+
+
 .control-next {
 	border-radius: 0rem 1rem 1rem 0rem;
 }
