--- a/src/Styles/Landing.scss
+++ b/src/Styles/Landing.scss
@@ -153,10 +153,8 @@
 }
 
 .landing-border {
-	position: absolute;
 	z-index: 10;
-	bottom: 0;
-	left: 0;
 	width: 100%;
+	background: $theme-black;
 	fill: $theme-dark;
 }
